# irisctl

./: CLAUDE.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: USER_GUIDE.md  iris-cli-plan.md  iris-cli-surface.md  mctl-composite.md
src/irisctl/: __init__.py  __main__.py  atelier_api.py  cli.py  config.py  docker_api.py  exec_session.py  http_api.py  license.py  output.py  rpc.py  watch.py
src/irisctl/commands/: _stub.py  alerts.py  backup.py  config_cmd.py  docs.py  exec_cmd.py  health.py  license.py  lifecycle.py  logs.py  metrics.py  namespaces.py  portal.py  ports.py  restore.py  shell.py  source.py  sql.py  status.py  version.py  which.py
tests/: conftest.py  test_atelier_api.py  test_cli.py  test_command_alerts.py  test_command_config.py  test_command_exec.py  test_command_health.py  test_command_license.py  test_command_lifecycle.py  test_command_logs.py  test_command_metrics.py  test_command_namespaces.py  test_command_persistence.py  test_command_portal_docs.py  test_command_ports.py  test_command_shell.py  test_command_source.py  test_command_sql.py  test_command_status.py  test_command_version.py  test_command_which.py  test_config.py  test_config_auth.py  test_docker_api.py  test_docker_api_phase4.py  test_e2e.py  test_exec_session.py  test_http_api.py  test_license_precheck.py  test_output.py  test_rpc.py  test_smoke.py  test_watch.py
