[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "irisctl"
version = "0.1.0"
description = "Programmer/AI-friendly CLI for InterSystems IRIS Community Edition Docker containers"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "argcomplete>=3.5",
]

[project.scripts]
irisctl = "irisctl.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov",
    "pytest-watch",
    "pytest-randomly",
    "ruff",
    "mypy",
    "pre-commit",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
markers = [
    "integration: requires the live foia IRIS container",
    "slow: full container stop/start cycle (~30-90s) — opt in with -m slow",
]

[tool.coverage.run]
source = ["src"]

[tool.coverage.report]
# Phase 4 introduced destructive code paths (real backup/restore,
# real container stop+start) that are gated behind the `slow` marker.
# Default `make check` runs without slow tests, so the achievable
# floor is ~65%; `make test-slow` would push it past 80%.
fail_under = 60
show_missing = true

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true
